# jtridas

./: .gitignore  CMakeLists.txt  README.JANA  TrigJANA.cpp  TrigJANA.h
API/: GroupedEventProcessor.cc  GroupedEventProcessor.h  JEventSource_Tridas.cc  JEventSource_Tridas.h  tridas_dataformat.hpp
